[wip] Start adding postgres support
by seeing what happens when we copy/paste the MYSQL code.

Currently wrestling with the test assertion helpers, particularly
around quoting in mysql vs postgres.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ gemfile:
   - gemfiles/4.2.gemfile
 before_script:
   - mysql -e 'create database polymorpheus_test;'
+  - psql -c 'create database polymorpheus_test;' -U postgres
